# test_repo_for_hele_prosjekt

./: README.md
app1/: pyproject.toml
app1/app1/: main.py
lib1/: README.md  pyproject.toml  release_new_version.sh
lib1/lib1/: __init__.py  util1.py  util2.py
repo/: lib1.whl  release.sh
